--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ project (Minesweeper)
 
 cmake_minimum_required (VERSION 3.1)
 
+set (CMAKE_CXX_STANDARD 14)
+
 file (GLOB SOURCES "src/*.cpp")
 add_executable (${PROJECT_NAME} ${SOURCES})
 
